--- a/index.html
+++ b/index.html
@@ -1123,7 +1123,7 @@
   <div class="container">
     <div class="mt55">
       <amp-carousel id="custom-button" width="700" height="600" layout="responsive" type="slides" autoplay delay="5000" role="region" aria-label="KING403">
-                  <amp-img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEilWiHiXI6XjG6eSSOnNSPnLzIQs4iWP9adHRkOX3zA-U_B4rvgwvRg1qdWZWDE8W_6V9yiimN027553yoM2XxmPYsc_n2RMRlkZ1rHhop2Wt8hJxrNSzgcBSwPez32hG0aJn4tqqLZ39ulPos2zz51RXSUuSm4GpOHBlXP6Ae4WlsKs4HhuIJ-E-Fe2ZDC/s16000/tiger.png" width="500" height="600" layout="responsive" alt="KING403"></amp-img>
+                  <amp-img src="https://github.com/tripraptomo/king403.com/blob/main/aaa/aaaa.png" width="500" height="600" layout="responsive" alt="KING403"></amp-img>
               </amp-carousel>
     </div>
   </div>
