--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="id" amp i-amphtml-binding i-amphtml-layout i-amphtml-no-boilerplate transformed="self;v=1" itemscope="itemscope" itemtype="https://schema.org/WebPage">
 <head>
@@ -6,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>KING403 👑 Situs Resmi Daftar Login King slot RTP 98% Mudah Menang</title>
   <meta name="description"  content="King403 Merupakan situs king slot dengan RTP 99.87% yang sangat di minati oleh kaum muda yang menyukai game tantangan dengan sistem antarmuka yang ramah dan responsif anda akan menimati setiap detik yang mendebarkan dengan situs king403 anda dapat mendaftarkan ID anda dan mulai memenangkan permainan.!"  />
-  <meta property="og:url" content="https://king403.com/">
+  <meta property="og:url" content="https://www.aviacommerce.org/">
   <meta name="robots" content="index, follow" />
   <meta name="page-locale" content="id,en">
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
@@ -28,7 +27,7 @@
   <meta name="geo.region" content="ID" />
   <meta name="tgn.nation" content="Indonesia">
   <link rel="shortcut icon" type="image/x-icon" href="https://sgalabel.blob.core.windows.net/agent-websites/238/medialibrary/images/238_0daae88e279b44b8af869c9caa4b220e.png" />
-    <link rel="canonical" href="https://king403.com/">
+    <link rel="canonical" href="https://www.aviacommerce.org/">
   <link href='https://sgalabel.blob.core.windows.net/agent-websites/238/medialibrary/images/238_4bb05c9609224ca1bf9aae8bcb09bc3a.png' rel='icon' sizes='32x32' type='image/png' />
   <style amp-runtime i-amphtml-version="012107240354000">
     html.i-amphtml-fie {
@@ -1107,7 +1106,7 @@
       "@type": "Organization",
       "name": "KING403",
       "alternateName": "KING403",
-      "url": "https://king403.com/",
+      "url": "https://www.aviacommerce.org/",
       "logo": "https://sgalabel.blob.core.windows.net/agent-websites/238/medialibrary/images/238_0daae88e279b44b8af869c9caa4b220e.png",
       "sameAs": "https://t.ly/king403"
     }
@@ -1193,7 +1192,7 @@
 <div class="container">
 <h1 style="text-align: center;">KING403 👑 Situs Resmi Daftar Login King slot RTP 98% Mudah Menang</h1>
 
-<p><a href="https://king403.com/">KING403</a> memiliki akses utama daftar menuju situs slot deposit 5k menggunakan pulsa tanpa potongan sehingga pada tahun 2024 ini KING403 sedang ramai sampai viral dibicarakan karena memberikan cuan kepada setiap pemain game online.</p>
+<p><a href="https://www.aviacommerce.org/">KING403</a> memiliki akses utama daftar menuju situs slot deposit 5k menggunakan pulsa tanpa potongan sehingga pada tahun 2024 ini KING403 sedang ramai sampai viral dibicarakan karena memberikan cuan kepada setiap pemain game online.</p>
 
 
 
