--- a/index.html
+++ b/index.html
@@ -1122,7 +1122,7 @@
   <div class="container">
     <div class="mt55">
       <amp-carousel id="custom-button" width="700" height="600" layout="responsive" type="slides" autoplay delay="5000" role="region" aria-label="KING403">
-                  <amp-img src="https://res.cloudinary.com/dtrjea8v5/image/upload/v1719826890/aaaa_mun7qe.png" width="500" height="600" layout="responsive" alt="KING403"></amp-img>
+                  <amp-img src="https://github.com/tripraptomo/king403.com/blob/main/aaa/king403disco.gif" width="500" height="600" layout="responsive" alt="KING403"></amp-img>
               </amp-carousel>
     </div>
   </div>
