--- a/index.html
+++ b/index.html
@@ -1166,7 +1166,7 @@
         </tr>
         <tr>
           <td>Min. Deposit</td>
-          <td>IDR 5,000</td>
+          <td>IDR 25,000</td>
         </tr>
         <tr>
           <td>Min. Withdraw</strong></td>
@@ -1178,7 +1178,7 @@
         </tr>
         <tr>
           <td>Slot Paling Gacor</td>
-          <td>Big Bass Bonanza Christmas, Candy Jar Clusters, Rujak Bonanza, Sugar Supreme Powernudge</td>
+          <td>King Slot, Candy Jar Clusters, Rujak Bonanza, Sugar Supreme Powernudge</td>
         </tr>
                   <tr>
             <td>Link Daftar KING403</td>
