--- a/index.html
+++ b/index.html
@@ -1108,7 +1108,7 @@
       "alternateName": "KING403",
       "url": "https://www.aviacommerce.org/",
       "logo": "https://sgalabel.blob.core.windows.net/agent-websites/238/medialibrary/images/238_0daae88e279b44b8af869c9caa4b220e.png",
-      "sameAs": "https://t.ly/king403"
+      "sameAs": "https://king403-com.vercel.app/"
     }
   </script>
 </head>
@@ -1140,8 +1140,8 @@
 
 <div class="container">
 <div class="header-button">
-      <a class="animated-button1" href="https://t.ly/king403"><span></span><span></span><span></span><span></span>Login</a>
-      <a class="animated-button1 signup" href="https://t.ly/king403"><span></span><span></span><span></span><span></span>Daftar</a>
+      <a class="animated-button1" href="https://linktr.ee/king403pola"><span></span><span></span><span></span><span></span>Login</a>
+      <a class="animated-button1 signup" href="https://linktr.ee/king403pola"><span></span><span></span><span></span><span></span>Daftar</a>
     </div>
   </div>
 
@@ -1182,7 +1182,7 @@
         </tr>
                   <tr>
             <td>Link Daftar KING403</td>
-            <td><a href="https://t.ly/king403">Klik Disini</a></td>
+            <td><a href="https://linktr.ee/king403pola">Klik Disini</a></td>
           </tr>
               </tbody>
     </table>
