--- a/index.html
+++ b/index.html
@@ -1140,8 +1140,8 @@
 
 <div class="container">
 <div class="header-button">
-      <a class="animated-button1" href="https://linktr.ee/king403pola"><span></span><span></span><span></span><span></span>Login</a>
-      <a class="animated-button1 signup" href="https://linktr.ee/king403pola"><span></span><span></span><span></span><span></span>Daftar</a>
+      <a class="animated-button1" href="https://www.aviacommerce.org/"><span></span><span></span><span></span><span></span>Login</a>
+      <a class="animated-button1 signup" href="https://www.aviacommerce.org/"><span></span><span></span><span></span><span></span>Daftar</a>
     </div>
   </div>
 
@@ -1182,7 +1182,7 @@
         </tr>
                   <tr>
             <td>Link Daftar KING403</td>
-            <td><a href="https://linktr.ee/king403pola">Klik Disini</a></td>
+            <td><a href="https://www.aviacommerce.org/">Klik Disini</a></td>
           </tr>
               </tbody>
     </table>
