--- a/index.html
+++ b/index.html
@@ -1140,8 +1140,8 @@
 
 <div class="container">
 <div class="header-button">
-      <a class="animated-button1" href="https://www.aviacommerce.org/"><span></span><span></span><span></span><span></span>Login</a>
-      <a class="animated-button1 signup" href="https://www.aviacommerce.org/"><span></span><span></span><span></span><span></span>Daftar</a>
+      <a class="animated-button1" href="https://t.ly/king403"><span></span><span></span><span></span><span></span>Login</a>
+      <a class="animated-button1 signup" href="https://t.ly/king403"><span></span><span></span><span></span><span></span>Daftar</a>
     </div>
   </div>
 
